Pollus.Emscripten/WGPU/WGPUBrowserNative.cs

    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateBindGroupLayout")]
    extern public static unsafe BindGroupLayout* DeviceCreateBindGroupLayout(Device* device, in BindGroupLayoutDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateBuffer")]
    extern public static unsafe Buffer* DeviceCreateBuffer(Device* device, BufferDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateBuffer")]
    extern public static unsafe Buffer* DeviceCreateBuffer(Device* device, in BufferDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateCommandEncoder")]
    extern public static unsafe CommandEncoder* DeviceCreateCommandEncoder(Device* device, CommandEncoderDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateCommandEncoder")]
    extern public static unsafe CommandEncoder* DeviceCreateCommandEncoder(Device* device, in CommandEncoderDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateComputePipeline")]
    extern public static unsafe ComputePipeline* DeviceCreateComputePipeline(Device* device, ComputePipelineDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateComputePipeline")]
    extern public static unsafe ComputePipeline* DeviceCreateComputePipeline(Device* device, in ComputePipelineDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateComputePipelineAsync")]
    extern public static unsafe void DeviceCreateComputePipelineAsync(Device* device, ComputePipelineDescriptor* descriptor, PfnCreateComputePipelineAsyncCallback callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateComputePipelineAsync")]
    extern public static unsafe void DeviceCreateComputePipelineAsync(Device* device, in ComputePipelineDescriptor descriptor, PfnCreateComputePipelineAsyncCallback callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreatePipelineLayout")]
    extern public static unsafe PipelineLayout* DeviceCreatePipelineLayout(Device* device, PipelineLayoutDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreatePipelineLayout")]
    extern public static unsafe PipelineLayout* DeviceCreatePipelineLayout(Device* device, in PipelineLayoutDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateQuerySet")]
    extern public static unsafe QuerySet* DeviceCreateQuerySet(Device* device, QuerySetDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateQuerySet")]
    extern public static unsafe QuerySet* DeviceCreateQuerySet(Device* device, in QuerySetDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateRenderBundleEncoder")]
    extern public static unsafe RenderBundleEncoder* DeviceCreateRenderBundleEncoder(Device* device, RenderBundleEncoderDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateRenderBundleEncoder")]
    extern public static unsafe RenderBundleEncoder* DeviceCreateRenderBundleEncoder(Device* device, in RenderBundleEncoderDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateRenderPipeline")]
    extern public static unsafe RenderPipeline* DeviceCreateRenderPipeline(Device* device, RenderPipelineDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateRenderPipeline")]
    extern public static unsafe RenderPipeline* DeviceCreateRenderPipeline(Device* device, in RenderPipelineDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateRenderPipelineAsync")]
    extern public static unsafe void DeviceCreateRenderPipelineAsync(Device* device, RenderPipelineDescriptor* descriptor, PfnCreateRenderPipelineAsyncCallback callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateRenderPipelineAsync")]
    extern public static unsafe void DeviceCreateRenderPipelineAsync(Device* device, in RenderPipelineDescriptor descriptor, PfnCreateRenderPipelineAsyncCallback callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateSampler")]
    extern public static unsafe Sampler* DeviceCreateSampler(Device* device, SamplerDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateSampler")]
    extern public static unsafe Sampler* DeviceCreateSampler(Device* device, in SamplerDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateShaderModule")]
    extern public static unsafe ShaderModule* DeviceCreateShaderModule(Device* device, ShaderModuleDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateShaderModule")]
    extern public static unsafe ShaderModule* DeviceCreateShaderModule(Device* device, in ShaderModuleDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateTexture")]
    extern public static unsafe Texture* DeviceCreateTexture(Device* device, TextureDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateTexture")]
    extern public static unsafe Texture* DeviceCreateTexture(Device* device, in TextureDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceDestroy")]
    extern public static unsafe void DeviceDestroy(Device* device);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceEnumerateFeatures")]
    extern public static unsafe nuint DeviceEnumerateFeatures(Device* device, FeatureName* features);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceEnumerateFeatures")]
    extern public static unsafe nuint DeviceEnumerateFeatures(Device* device, ref FeatureName features);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceGetLimits")]
    extern public static unsafe bool DeviceGetLimits(Device* device, SupportedLimits* limits);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceGetLimits")]
    extern public static unsafe bool DeviceGetLimits(Device* device, ref SupportedLimits limits);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceGetQueue")]
    extern public static unsafe Queue* DeviceGetQueue(Device* device);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceHasFeature")]
    extern public static unsafe bool DeviceHasFeature(Device* device, FeatureName feature);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDevicePopErrorScope")]
    extern public static unsafe void DevicePopErrorScope(Device* device, PfnErrorCallback callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDevicePushErrorScope")]
    extern public static unsafe void DevicePushErrorScope(Device* device, ErrorFilter filter);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceSetLabel")]
    extern public static unsafe void DeviceSetLabel(Device* device, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceSetLabel")]
    extern public static unsafe void DeviceSetLabel(Device* device, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceSetLabel")]
    extern public static unsafe void DeviceSetLabel(Device* device, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceSetUncapturedErrorCallback")]
    extern public static unsafe void DeviceSetUncapturedErrorCallback(Device* device, PfnErrorCallback callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceReference")]
    extern public static unsafe void DeviceReference(Device* device);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceRelease")]
    extern public static unsafe void DeviceRelease(Device* device);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuInstanceCreateSurface")]
    extern public static unsafe Surface* InstanceCreateSurface(Instance* instance, SurfaceDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuInstanceCreateSurface")]
    extern public static unsafe Surface* InstanceCreateSurface(Instance* instance, in SurfaceDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuInstanceProcessEvents")]
    extern public static unsafe void InstanceProcessEvents(Instance* instance);

    [DllImport("__Internal_emscripten", EntryPoint = "wgpuInstanceRequestAdapter")]
    extern public static unsafe void InstanceRequestAdapter(Instance* instance, RequestAdapterOptions* options, nint callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuInstanceRequestAdapter")]
    extern public static unsafe void InstanceRequestAdapter(Instance* instance, in RequestAdapterOptions options, nint callback, void* userdata);
